syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";

option go_package = "api/user/v1";

service User {
  rpc GetUser (GetUserReq) returns (GetUserReply) {}
}

message GetUserReq {
    int64 id = 1;
}

message GetUserReply {
    int64 id = 1;
    string name = 2;
}
